--- a/templates/prob1.html
+++ b/templates/prob1.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="static/prob1.css.css">
-        
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/modules/export-data.js"></script>
-        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-        <title>Plot</title>
-    </head>
-    
-<body>
+{% extends 'layout.html' %}
 
+    {% block content %}
 
 <h2>{{ data }}</h2>
 
@@ -35,13 +22,11 @@
     </select>
     <br><br>
 
-    <input type="button" onclick="getOption()" value="Click Me!">
+    <input type="button" onclick="getOption1()" value="Click Me!">
 </form>
     <p id="demo"></p>
-    <div class="box" id="container_3"></div>
+    <div class="box" id="container_1"></div>
     <p id="demo1"></p>
 
-    <script src="../static/prob1.js"></script>
-
-</body>
-</html>
+    <script src="../static/plot.js"></script>
+    {% endblock content %}
