--- a/templates/prob3.html
+++ b/templates/prob3.html
@@ -1,1 +1,23 @@
-{{ data }}
+{% extends 'layout.html' %}
+{% block content %} 
+<div>{{ data }}</div>
+    
+    <p>Select your favorite colors:</p>
+
+    <input type="checkbox" name="color" value="India"> India
+    <input type="checkbox" name="color" value="Australia"> Australia
+    <input type="checkbox" name="color" value="West Indies"> West Indies
+    <input type="checkbox" name="color" value="New Zealand"> New Zealand
+    <input type="checkbox" name="color" value="South Africa"> South Africa
+    <input type="checkbox" name="color" value="Sri Lanka"> Sri Lanka
+    <input type="checkbox" name="color" value="Pakistan"> Pakistan
+    <input type="checkbox" name="color" value="England"> England
+    <input type="checkbox" name="color" value="Zimbabwe"> Zimbabwe
+
+    <button id="btn">Get Selected Colors</button>
+
+    <p id="demo1"></p>
+    <div class="box" id="container_3"></div>
+
+    <script src="/static/plot.js"></script>
+{% endblock content %}
