--- a/templates/prob4.html
+++ b/templates/prob4.html
@@ -2,5 +2,126 @@
 {% block content %}
     {{ data }}
 
+    <p>Select Year:</p>
+
+    <input type="checkbox" name="year" value="2008"> 2008
+    <input type="checkbox" name="year" value="2009"> 2009
+    <input type="checkbox" name="year" value="2010"> 2010
+    <input type="checkbox" name="year" value="2011"> 2011
+    <input type="checkbox" name="year" value="2012"> 2012
+    <input type="checkbox" name="year" value="2013"> 2013
+    <input type="checkbox" name="year" value="2014"> 2014
+    <input type="checkbox" name="year" value="2015"> 2015
+    <input type="checkbox" name="year" value="2016"> 2016
+    <input type="checkbox" name="year" value="2017"> 2017
+
+    <hr>
+    <p>Select Team:</p>
+    <input type="checkbox" name="name" value="Chennai Super Kings"> Chennai Super Kings
+    <input type="checkbox" name="name" value="Deccan Chargers"> Deccan Chargers
+    <input type="checkbox" name="name" value="Delhi Daredevils"> Delhi Daredevils
+    <input type="checkbox" name="name" value="Gujarat Lions"> Gujarat Lions
+    <input type="checkbox" name="name" value="Kings XI Punjab"> Kings XI Punjab
+    <input type="checkbox" name="name" value="Kochi Tuskers Kerala"> Kochi Tuskers Kerala
+    <input type="checkbox" name="name" value="Kolkata Knight Riders"> Kolkata Knight Riders
+    <input type="checkbox" name="name" value="Mumbai Indians"> Mumbai Indians
+    <input type="checkbox" name="name" value="Pune Warriors"> Pune Warriors
+    <input type="checkbox" name="name" value="Rajasthan Royals"> Rajasthan Royals
+    <input type="checkbox" name="name" value="Rising Pune Supergiant"> Rising Pune Supergiant
+    <input type="checkbox" name="name" value="Rising Pune Supergiants"> Rising Pune Supergiants
+    <input type="checkbox" name="name" value="Royal Challengers Bangalore"> Royal Challengers Bangalore
+    <input type="checkbox" name="name" value="Sunrisers Hyderabad"> Sunrisers Hyderabad
+
+
+    <button id="btn1">Get Selected Colors</button>
+
+    <p id="demo1"></p>
+
+    <figure class="highcharts-figure">
+        <div id="container_4"></div>
+    </figure>
+
+
+    <!-- <script src="../static/plot.js"></script> -->
+    <script>
+
+
+    function getSelectedCheckboxValues(name) {
+        // code help https://www.javascripttutorial.net/javascript-dom/javascript-checkbox/
+        const checkboxes = document.querySelectorAll(`input[name="${name}"]:checked`);
+        let values = [];
+        checkboxes.forEach((checkbox) => {
+            values.push(checkbox.value);
+        });
+        return values;
+        }
+
+        const btn = document.querySelector('#btn1');
+        btn.addEventListener('click', (event) => {
+        
+        let value = {
+            'year': getSelectedCheckboxValues('year'),
+            'team': getSelectedCheckboxValues('name')
+        } 
+        fetch('http://127.0.0.1:8000/stacked/', {
+        method: "POST",
+        body: JSON.stringify(value),
+        headers: {"Content-type": "application/json; charset=UTF-8"}
+        })
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById("demo1").innerHTML = JSON.stringify(data);
+          console.log(data)
+          let year = value.year
+          year.sort()
+          console.log(year) 
+
+            let total_data = []
+            for (i of value.team){
+                let list = []
+                for (j of year){
+                    let check = 0
+                    for (k of data){
+                        if (i == k.team1 && j == k.season){
+                            check = k.total;
+                            console.log('hello');
+                            break
+                        }
+                    }
+                    list.push(check)
+                }
+                total_data.push({"name": i, "data": list})
+            }
+            
+            console.log(total_data)
+            Highcharts.chart('container_4', {
+            chart: {
+                type: 'bar'
+            },
+            title: {
+                text: 'Stacked chart of matches played by team by season'
+            },
+            xAxis: {
+                categories: year
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: 'Matches Played by Team'
+                }
+            },
+            legend: {
+                reversed: true
+            },
+            plotOptions: {
+                series: {
+                    stacking: 'normal'
+                }
+            },
+            series: total_data
+            });
+        });
+        });
+    </script>
     
 {% endblock content %}
