--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="../static/prob1.css">
     <title>Document</title>
 </head>
-<body>
-    <a href="{% url 'prob1' %}" class="button button1">Problem 1</a>
-    <a href="{% url 'prob2' %}" class="button button2">Problem 2</a>
-    <a href="{% url 'prob3' %}" class="button button1">Problem 3</a>
-    <a href="{% url 'prob4' %}" class="button button2">Problem 4</a>
+<body >
+    <div class="fit">
+    <a href="{% url 'prob1' %}" class="button button1 size">Problem 1</a>
+    <a href="{% url 'prob2' %}" class="button button2 size">Problem 2</a>
+    <a href="{% url 'prob3' %}" class="button button1 size">Problem 3</a>
+    <a href="{% url 'prob4' %}" class="button button2 size">Problem 4</a>
+    </div>
 </body>
 </html>
