--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../static/prob1.css">
+        <!-- <link rel="stylesheet" href="../static/prob1.css"> -->
             
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -15,5 +15,6 @@
     <body>
         {% include 'home.html' %}
         {% block content %} {% endblock content %}
+        
     </body>
 </html>
