--- a/templates/prob1.html
+++ b/templates/prob1.html
@@ -1,34 +1,28 @@
 {% extends 'layout.html' %}
+{% block content %}
+    <form class="fit">
+        <h2>Total runs scored by team</h2>
+        Select year:
+        <select class="size" id="mySelect1">
+            <option>all</option>
+            <option>2017</option>
+            <option>2008</option>
+            <option>2009</option>
+            <option>2010</option>
+        </select>
 
-    {% block content %}
-
-<!-- <h2>{{ data }}</h2> -->
-  <form class="fit">
-    <h2>Total runs scored by team</h2>
-    Select year:
-    <select class="size" id="mySelect1">
-      <option>all</option>
-      <option>2017</option>
-      <option>2008</option>
-      <option>2009</option>
-      <option>2010</option>
-    </select>
-
-    Select top rank:
-    <select class="size" id="mySelect2">
-      <option>all</option>
-      <option>10</option>
-      <option>5</option>
-      <option>3</option>
-    </select>
-    <input class="size" type="button" onclick="getOption1()" value="Get Graph">
-  </form>
-
-    <p id="demo"></p>
+        Select top rank:
+        <select class="size" id="mySelect2">
+            <option>all</option>
+            <option>10</option>
+            <option>5</option>
+            <option>3</option>
+        </select>
+        <input class="size" type="button" onclick="getOption1()" value="Get Graph">
+    </form>
     <div class="container">
-      <div id="container_1"></div>
+        <div class="box" id="container_1"></div>
     </div>
-    <p id="demo1"></p>
-
+    
     <script src="../static/prob1.js"></script>
-    {% endblock content %}
+{% endblock content %}
