--- a/templates/prob2.html
+++ b/templates/prob2.html
@@ -32,7 +32,7 @@
         <input class="size" type="button" onclick="getOption2()" value="Get Graph">
     </form>
         <div class="container">
-          <div id="container_2"></div>
+          <div class="box" id="container_2"></div>
         </div>
     
         <script src="../static/prob2.js"></script>
