user stories & clean up

--- a/templates/prob2.html
+++ b/templates/prob2.html
@@ -5,19 +5,35 @@
         Select year:
         <select class="size" id="dd-1">
             <option>all</option>
-          <option>2017</option>
-          <option>2008</option>
-          <option>2009</option>
-          <option>2010</option>
+            <option>2008</option>
+            <option>2009</option>
+            <option>2010</option>
+            <option>2011</option>
+            <option>2012</option>
+            <option>2013</option>
+            <option>2014</option>
+            <option>2015</option>
+            <option>2016</option>
+            <option>2017</option>
         </select>
 
         Select team name:
         <select class="size" id="dd-2">
             <option>all</option>
-          <option>Royal Challengers Bangalore</option>
-          <option>Rising Pune Supergiant</option>
-          <option>Kolkata Knight Riders</option>
-          <option>Kings XI Punjab</option>
+            <option>Chennai Super Kings</option>
+            <option>Deccan Chargers</option>
+            <option>Delhi Daredevils</option>
+            <option>Gujarat Lions</option>
+            <option>Kings XI Punjab</option>
+            <option>Kochi Tuskers Kerala</option>
+            <option>Kolkata Knight Riders</option>
+            <option>Mumbai Indians</option>
+            <option>Pune Warriors</option>
+            <option>Rajasthan Royals</option>
+            <option>Rising Pune Supergiant</option>
+            <option>Rising Pune Supergiants</option>
+            <option>Royal Challengers Bangalore</option>
+            <option>Sunrisers Hyderabad</option>
         </select>
     
         Select top rank:
